// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`A.js format[flow] 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
require('./C');

=====================================output=====================================
require("./C");

================================================================================
`;

exports[`B.js format[flow] 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
require('./C');

=====================================output=====================================
require("./C");

================================================================================
`;

exports[`C.js format[flow] 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
require('./D');
require('./E');
require('./F');
require('./G');

=====================================output=====================================
require("./D");
require("./E");
require("./F");
require("./G");

================================================================================
`;

exports[`D.js format[flow] 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
require('./I');

=====================================output=====================================
require("./I");

================================================================================
`;

exports[`E.js format[flow] 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
require('./I');

=====================================output=====================================
require("./I");

================================================================================
`;

exports[`F.js format[flow] 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
// empty

=====================================output=====================================
// empty

================================================================================
`;

exports[`G.js format[flow] 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
require('./H');

=====================================output=====================================
require("./H");

================================================================================
`;

exports[`H.js format[flow] 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
// empty

=====================================output=====================================
// empty

================================================================================
`;

exports[`I.js format[flow] 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
require('./A');

=====================================output=====================================
require("./A");

================================================================================
`;
